main.tf
resource "aws_vpc" "god_vpc" {
  cidr_block = var.cidr
}

resource "aws_subnet" "sub1" {
  vpc_id                  = aws_vpc.god_vpc.id
  cidr_block              = "10.0.0.0/24"
  availability_zone       = "eu-west-1a"
  map_public_ip_on_launch = true
}

resource "aws_subnet" "sub2" {
  vpc_id                  = aws_vpc.god_vpc.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "eu-west-1b"
  map_public_ip_on_launch = true
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.god_vpc.id
}

resource "aws_route_table" "RT" {
  vpc_id = aws_vpc.god_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
}

resource "aws_route_table_association" "rta1" {
  subnet_id      = aws_subnet.sub1.id
  route_table_id = aws_route_table.RT.id
}

resource "aws_route_table_association" "rta2" {
  subnet_id      = aws_subnet.sub2.id
  route_table_id = aws_route_table.RT.id
}

resource "aws_security_group" "god_sg" {
  name   = "web-sg"
  vpc_id = aws_vpc.god_vpc.id

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "SSH"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "god_sg"
  }
}



resource "aws_s3_bucket" "exercise" {
  bucket = "altschool-terraform-project-2023"
}

resource "aws_instance" "god_server_instance1" {
  ami                    = "ami-0694d931cee176e7d"
  instance_type          = "t2.micro"
  vpc_security_group_ids = [aws_security_group.god_sg.id]
  subnet_id              = aws_subnet.sub1.id
  user_data              = base64encode(file("data.sh"))
}

resource "aws_instance" "god_server_instance2" {
  ami                    = "ami-0694d931cee176e7d"
  instance_type          = "t2.micro"
  vpc_security_group_ids = [aws_security_group.god_sg.id]
  subnet_id              = aws_subnet.sub2.id
  user_data              = base64encode(file("userdata.sh"))
}


#Application Load Balancer
resource "aws_lb" "god_alb" {
  name               = "myalb"
  internal           = false
  load_balancer_type = "application"

  security_groups = [aws_security_group.god_sg.id]
  subnets         = [aws_subnet.sub1.id, aws_subnet.sub2.id]

  tags = {
    Name : "web"
  }
}

resource "aws_lb_target_group" "god_tg" {
  name     = "godTg"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.god_vpc.id

  health_check {
    path = "/"
    port = "traffic-port"
  }
}

resource "aws_lb_target_group_attachment" "attach1" {
  target_group_arn = aws_lb_target_group.god_tg.arn
  target_id        = aws_instance.god_server_instance1.id
  port             = 80
}

resource "aws_lb_target_group_attachment" "attach2" {
  target_group_arn = aws_lb_target_group.god_tg.arn
  target_id        = aws_instance.god_server_instance2.id
  port             = 80
}

resource "aws_lb_listener" "listener" {
  load_balancer_arn = aws_lb.god_alb.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    target_group_arn = aws_lb_target_group.god_tg.arn
    type             = "forward"
  }
}

output "loadbalancerdns" {
  value = aws_lb.god_alb.dns_name
}
